<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Relative_Activity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="2dp"
        android:text="@string/txtRelative_Header" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="185dp"
        android:text="@string/txtRegister_email" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginStart="3dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="301dp"
        android:text="@string/btnRegister" />

    <Button
        android:id="@+id/button9"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignBottom="@+id/button8"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/button8"
        android:layout_toRightOf="@+id/button8"
        android:text="@string/btnLogin" />

    <Button
        android:id="@+id/button10"
        android:layout_width="321dp"
        android:layout_height="44dp"
        android:layout_below="@+id/button9"
        android:layout_alignStart="@+id/button8"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignEnd="@+id/button9"
        android:layout_alignRight="@+id/button9"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="-6dp"
        android:layout_marginRight="-6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/btn_Unregister" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-157dp"
        android:layout_marginBottom="350dp"
        android:contentDescription="@string/btnRegister"
        app:srcCompat="@drawable/register_icon" />

</RelativeLayout>